# tosca-app

./: .gitignore  Cargo.toml  LICENSE  README.md  _typos.toml  startup.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  publish.yml
assets/css/: tosca-app.css
assets/icons/: site.webmanifest
assets/js/: tosca-app.js
locales/: en.toml  it.toml
src/: config.rs  devices.rs  discovery.rs  error.rs  events.rs  index.rs  layout.rs  logging.rs  main.rs  privacy.rs  privacy_policy.rs  request.rs  utils.rs
templates/: devices.html  error.html  footer.html  head.html  index.html  layout.html  modal-devices.html  modal-hazards.html  navbar.html  privacy.html
templates/widgets/: spinner.html
