[package]
name = "tosca-app"
version = "0.1.0"
edition = "2024"

[dependencies]
tosca.version = "0.1.0"

tosca-controller.version = "0.1.0"

axum.version = "0.8.0"
axum.default-features = false
axum.features = ["tokio", "http1", "http2", "json"]

axum-extra.version = "0.12.5"
axum-extra.default-features = false
axum-extra.features = ["form", "query"]

chrono.version = "0.4"
chrono.default-features = false
chrono.features = ["clock"]

clap.version = "4.5"
clap.features = ["derive", "std"]

futures.version = "0.3.32"
futures.default-features = false

minijinja.version = "2.16"

rust-i18n.version = "3.1.5"

serde.version = "1.0"
serde.default-features = false
serde.features = ["derive"]

serde_json.version = "1"
serde_json.default-features = false
serde_json.features = ["alloc"]

tokio.version = "1.0"
tokio.default-features = false
tokio.features = ["rt-multi-thread"]

tokio-stream.version = "0.1.17"
tokio-stream.features = ["sync"]

tower-http.version = "0.6.1"
tower-http.default-features = false
tower-http.features = ["fs", "trace"]

tracing.version = "0.1"
tracing.default-features = false
tracing.optional = true

tracing-subscriber.version = "0.3"
tracing-subscriber.default-features = false
tracing-subscriber.features = ["env-filter", "fmt", "json", "ansi"]
tracing-subscriber.optional = true

[features]
default = ["logging"]
logging = ["tracing", "tracing-subscriber"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = "unwind"
incremental = false
overflow-checks = false
strip = "debuginfo"
